# rag-project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.dev.dockerignore  README.md  compose.dev.yaml  compose.yaml  data.json  infra.yaml  pyproject.toml
.github/workflows/: ci.yaml
app/: config.py  logging_config.py  main.py  models.py
app/api/: main.py  schemas.py
app/api/routes/: crawl.py  query.py
app/infra/: cfr2.py  postgres.py  qdrant.py  relational_db.py  supabase.py  vector_db.py
app/pipelines/: generation.py  ingestion.py  retrieval.py
app/services/: chunking.py  crawling.py  embedding.py  indexing.py  reranking.py  searching.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_5f5a17c013354698_config_py.html  z_5f5a17c013354698_logging_config_py.html  z_5f5a17c013354698_main_py.html  z_5f5a17c013354698_models_py.html  z_7bced6e93b6b263d_crawl_py.html  z_7bced6e93b6b263d_query_py.html  z_c318f3fa19a49f69_chunking_py.html  z_c318f3fa19a49f69_crawling_py.html  z_c318f3fa19a49f69_embedding_py.html  z_c318f3fa19a49f69_indexing_py.html  z_c318f3fa19a49f69_reranking_py.html  z_c318f3fa19a49f69_searching_py.html  z_cfb6adc3f81c8e3c_main_py.html  z_cfb6adc3f81c8e3c_schemas_py.html  z_d85cb2c1c38d921b_generation_py.html  z_d85cb2c1c38d921b_ingestion_py.html  z_d85cb2c1c38d921b_retrieval_py.html  z_fc22f0d6bdf50140_cfr2_py.html  z_fc22f0d6bdf50140_postgres_py.html  z_fc22f0d6bdf50140_qdrant_py.html  z_fc22f0d6bdf50140_supabase_py.html
scripts/: smoke_crawl.py  smoke_retrieve.py
tests/: conftest.py  constants.py  test_main.py
tests/api/: test_crawl_routes.py  test_query_routes.py  test_schemas.py
tests/infra/: test_obj_store.py  test_rel_db.py  test_vec_db.py
tests/pipelines/: test_generation.py  test_ingestion.py  test_retrieval.py
tests/services/: test_chunking.py  test_crawling.py  test_embedding.py  test_indexing.py  test_reranking.py  test_searching.py
tests/stubs/: obj_store_stub.py
