[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.26.3",
    "boto3>=1.42.29",
    "chonkie>=1.5.2",
    "crawl4ai>=0.7.8",
    "fastapi[standard]>=0.128.0",
    "logfire>=4.18.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-ai>=1.43.0",
    "qdrant-client>=1.16.2",
    "redis>=5.3.1",
    "sentence-transformers>=5.2.0",
    "sqlmodel>=0.0.31",
    "tokenizer>=3.6.2",
]

[dependency-groups]
dev = [
    "deepeval>=3.8.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
    "ty>=0.0.12",
    "types-boto3>=1.42.29",
    "types-redis>=4.6.0.20241004",
]
