[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=7.0.0",
    "aiosqlite>=0.22.1",
    "arq>=0.26.3",
    "asyncpg>=0.31.0",
    "chonkie[tokenizers]>=1.5.2",
    "crawl4ai[pdf]>=0.7.8",
    "fastapi[standard]>=0.128.0",
    "logfire>=4.18.0",
    "pydantic-ai>=1.43.0",
    "qdrant-client[fastembed]>=1.16.2",
    "redis[hiredis]>=5.3.1",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "deepeval>=3.8.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
tool = [
    "commitizen>=4.11.6",
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
    "types-aioboto3[aioboto3,s3]>=9.6.0.post2",
    "types-redis>=4.6.0.20241004",
]

[tool.uv]
default-groups = ["dev", "tool"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest]
addopts = [
    "-v",
    "-ra",
    "--color=yes",
    "--tb=short",
    "--strict-markers"
]
testpaths = ["app", "tests"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["app"]

[project.scripts]
# rag = ""

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""
