[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=7.0.0",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "chonkie[tokenizers]>=1.5.2",
    "crawl4ai>=0.7.8",
    "fastapi[standard]>=0.128.0",
    "google-genai>=1.59.0",
    "python-dotenv>=1.2.1",
    "qdrant-client[fastembed]>=1.16.2",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "deepeval>=3.8.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
tool = [
    "commitizen>=4.11.6",
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
    "types-aiobotocore-s3>=2.25.1",
]

[tool.uv]
default-groups = ["dev", "tool"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff.lint]
extend-select = ["D", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest]
addopts = [
    "-v",
    "-ra",
    "--color=yes",
    "--tb=short",
    "--strict-markers"
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
relative_files = true
source = ["app"]

[project.scripts]
# rag = ""

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""
